test_suite/alan-2022-examples/failing/003980_mutation.alan
source p begin leave(80) boolean O; end
